# AlpacaAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: agent.py  routing.py  runner.py
state/: state.json
tests/: test_agent.py
utils/: state.py
